# rc_functions_controller

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _config.yml  partitions.csv  sdkconfig.defaults
configs/: full_beetle.json  full_boat.json  full_train.json  full_truck.json
doc/: CMakeLists.txt  architecture.md  create_proc_table.py  procs.md  signals.md
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audio.h  audio_dynamic.cpp  audio_dynamic.h  audio_engine.cpp  audio_engine.h  audio_loop.cpp  audio_loop.h  audio_noise.cpp  audio_noise.h  audio_ringbuffer.cpp  audio_ringbuffer.h  audio_simple.cpp  audio_simple.h  audio_steam.cpp  audio_steam.h
src/bluetooth/: CMakeLists.txt  bleprph.h  bluetooth.h  common.h  gap.c  gap.h  gatt_svc.c  gatt_svc.h  gatt_svr.c  main_srv.cpp
src/bluetooth/nimble_peripheral_utils/: esp_peripheral.h  misc.c
src/config/: procs_config.json  sample_config.json  signals_config.json
src/controller/: CMakeLists.txt  flash_sample.cpp  flash_sample.h  main.cpp  proc_storage.cpp  proc_storage.h  sample_storage_singleton.cpp  sample_storage_singleton.h  serialization.cpp  serialization_tool.py  simple_byte_stream.cpp  simple_byte_stream.h  wav_sample.cpp  wav_sample.h
src/engine/: CMakeLists.txt  convert_power_curves.py  engine_brake.cpp  engine_brake.h  engine_gear.cpp  engine_gear.h  engine_idle.cpp  engine_idle.h  engine_reverse.cpp  engine_reverse.h  engine_simple.cpp  engine_simple.h  engine_speed.cpp  engine_speed.h  engine_throttle.cpp  engine_throttle.h  power_curves.cpp  power_curves.h
src/input/: CMakeLists.txt  input.h  input_adc.cpp  input_adc.h  input_demo.cpp  input_demo.h  input_pin.cpp  input_pin.h  input_ppm.cpp  input_ppm.h  input_pwm.cpp  input_pwm.h  input_sbus.cpp  input_sbus.h  input_srxl.cpp  input_srxl.h
src/output/: CMakeLists.txt  output.cpp  output.h  output_audio.cpp  output_audio.h  output_dummy.cpp  output_dummy.h  output_esc.cpp  output_esc.h  output_led.cpp  output_led.h  output_pwm.cpp  output_pwm.h
src/proc/: CMakeLists.txt  curve.h  proc.h  proc_auto.cpp  proc_auto.h  proc_combine.cpp  proc_combine.h  proc_cranking.cpp  proc_cranking.h  proc_delay.cpp  proc_delay.h  proc_direction.cpp  proc_direction.h  proc_excavator.cpp  proc_excavator.h  proc_expo.cpp  proc_expo.h  proc_fade.cpp  proc_fade.h  proc_group.h  proc_indicator.cpp  proc_indicator.h  proc_map.cpp  proc_map.h  proc_misfire.cpp  proc_misfire.h  proc_neutral.cpp  proc_neutral.h  proc_periodic.cpp  proc_periodic.h  proc_power.cpp  proc_power.h  proc_random.cpp  proc_random.h  proc_scenario.cpp  proc_scenario.h  proc_sequence.cpp  proc_sequence.h  proc_switch.cpp  proc_switch.h  (+5 more)
src/samples/: CMakeLists.txt  audio_tool.py  sample.cpp  sample.h
src/signals/: CMakeLists.txt  signal_types.h  signals.cpp  signals.h  signals_tool.py
test/: CMakeLists.txt  audio_test.cpp  audioringbuffer_test.cpp  bytestream_test.cpp  curves_test.cpp  engine_gear_test.cpp  engine_idle_test.cpp  engine_reverse_test.cpp  engine_simple_test.cpp  engine_simulation.cpp  engine_speed_test.cpp  flash_sample_test.cpp  proc_auto_test.cpp  proc_sequence_test.cpp  proc_storage_test.cpp  proc_switch_test.cpp  proc_test.cpp  sample_storage_test.cpp  wav_sample_test.cpp
web/: CMakeLists.txt  create_js.py  index.html  style.css
web/script/: bluetooth.js  control.js  def_config.js  def_procs.js  def_sample.js  def_signals.js  procs.js  samples.js  signals.js  simple_stream.js  wav.js  widgets.js
